<resources>
    <string name="app_name">Study Time</string>
    <string name="start_studying">Start Studying</string>
    <string name="stop_studying">Stop Studying</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="continue_as_guest"> Continue As Guest </string>
    <string name="sign_up">Sign Up</string>
    <string name="minutes">Enter Minutes</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="review_study_habits">Review Study Habits</string>
    <string name="study_again">Study Again!</string>

</resources>
