<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="55sp"
        android:textStyle="bold"
        android:layout_marginTop="76dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="18sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="18sp"
        android:layout_below="@+id/button_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp" />

    <Button
        android:id="@+id/button_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_as_guest"
        android:textSize="18sp"
        android:layout_below="@+id/button_signUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp" />
</RelativeLayout>