<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/fragment_register"
             tools:context="edu.fsu.cs.mobile.project1.RegisterFragment">


    <RelativeLayout
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:inputType="textPersonName"
            android:hint="Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_name"/>


        <EditText
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_name"
            android:layout_alignParentStart="true"
            android:id="@+id/editText_email"/>

        <EditText
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText_email"
            android:id="@+id/editText_password"/>

        <Button
            android:id="@+id/button_signUp"
            android:background="@drawable/mybutton"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_password"
            android:layout_alignParentStart="true"/>


    </RelativeLayout>

</FrameLayout>
